tests/negative/gold/typed_local2_test.gold
tests/negative/typed_local2_test.toit:5:14: error: Type mismatch. Expected 'int'. Got 'string'
  local /int := "str"
             ^~
As check failed: a string ("str") is not a int.
  0: main                      tests/negative/typed_local2_test.toit:5:14
  1: __entry__.<lambda>        <sdk>/core/entry.toit:48:20
